<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_live_help_black_24dp"
            android:title="@string/help"/>
        <item
            android:id="@+id/nav_opensource"
            android:icon="@drawable/ic_github_mark_32px"
            android:title="@string/open_source"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24px"
            android:title="@string/about"/>
    </group>
</menu>